# jisho

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.rst
anki/: __init__.py  importer.py  manifest.json  model.py
etc/: zip-anki-plugin
include/jisho/: batch.hpp  curl.hpp  definition.hpp  jisho.hpp  map.hpp  sqlite.hpp
package/arch-linux/: PKGBUILD
src/: CMakeLists.txt  curl.cc  definition.cc  jisho.cc  main.cc  sqlite.cc
